<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/home_title"
        android:textColor="@color/black"
        android:textSize="@dimen/title_H1"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@id/home_title_textview">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/camera_button"
            style="@style/home_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:backgroundTint="@color/light_blue"
            app:icon="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title_textview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favourite_button"
            style="@style/home_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:backgroundTint="@color/light_purple"
            app:icon="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toBottomOf="@id/camera_button"
            app:layout_constraintEnd_toStartOf="@id/terrain_button"
            app:layout_constraintStart_toEndOf="@id/camera_button"
            app:layout_constraintTop_toTopOf="@id/camera_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terrain_button"
            style="@style/home_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:backgroundTint="@color/light_pink"
            app:icon="@drawable/ic_baseline_terrain_24"
            app:layout_constraintBottom_toBottomOf="@id/favourite_button"
            app:layout_constraintEnd_toStartOf="@id/face_button"
            app:layout_constraintStart_toEndOf="@id/favourite_button"
            app:layout_constraintTop_toTopOf="@id/favourite_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/face_button"
            style="@style/home_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:backgroundTint="@color/light_orange"
            app:icon="@drawable/ic_baseline_face_24"
            app:layout_constraintBottom_toBottomOf="@id/terrain_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/terrain_button"
            app:layout_constraintTop_toTopOf="@id/terrain_button" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/buttons_container">

        <com.google.android.material.card.MaterialCardView
            style="@style/home_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_calendario" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_calendar_text" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_calendar_title" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/home_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_camping" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_camping_text" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_camping_title" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>